Fixed Screens not filling full window and fixed prompts too

--- a/com/github/dm0896665/main/ui/screens/main_menu.ui
+++ b/com/github/dm0896665/main/ui/screens/main_menu.ui
@@ -13,11 +13,14 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="container" stretch="0,0">
      <property name="spacing">
-      <number>6</number>
+      <number>5</number>
      </property>
      <property name="sizeConstraint">
       <enum>QLayout::SizeConstraint::SetMinimumSize</enum>
